--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -7,8 +7,15 @@ on:
     branches: [ main ]
 
 jobs:
-  tests:
+  build:
+    strategy:
+      fail-fast: true
+      matrix:
+        neovim_branch: ['v0.7.0', 'nightly']
     runs-on: ubuntu-latest
+    env:
+      NEOVIM_BRANCH: ${{ matrix.neovim_branch }}
+
     steps:
       - uses: actions/checkout@v3
 
@@ -16,6 +23,7 @@ jobs:
         uses: rhysd/action-setup-vim@v1
         with:
           neovim: true
+          version: ${{ NEOVIM_BRANCH }}
 
       - name: Install plenary
         run: |
