--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -13,8 +13,6 @@ jobs:
       matrix:
         neovim_branch: ['v0.7.0', 'nightly']
     runs-on: ubuntu-latest
-    env:
-      NEOVIM_BRANCH: ${{ matrix.neovim_branch }}
 
     steps:
       - uses: actions/checkout@v3
@@ -23,7 +21,7 @@ jobs:
         uses: rhysd/action-setup-vim@v1
         with:
           neovim: true
-          version: ${{ NEOVIM_BRANCH }}
+          version: ${{ matrix.neovim_branch }}
 
       - name: Install plenary
         run: |
