--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -22,7 +22,7 @@ jobs:
           neovim: true
           version: ${{ matrix.neovim_branch }}
 
-      - name: Install plenary
+      - name: Install dependent repos
         run: |
           git clone --depth 1 https://github.com/nvim-lua/plenary.nvim ~/.local/share/nvim/site/pack/vendor/start/plenary.nvim
           git clone --depth 1 https://github.com/nvim-treesitter/nvim-treesitter ~/.local/share/nvim/site/pack/vendor/start/nvim-treesitter
