--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -7,10 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-    strategy:
-      matrix:
-        neovim_branch: ['v0.7.0', 'nightly']
+  tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,7 +17,6 @@ jobs:
         uses: rhysd/action-setup-vim@v1
         with:
           neovim: true
-          version: ${{ matrix.neovim_branch }}
 
       - name: Install dependent repos
         run: |
