--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -7,7 +7,10 @@ on:
     branches: [ main ]
 
 jobs:
-  tests:
+  build:
+    strategy:
+      matrix:
+        neovim_branch: ['v0.7.0', 'nightly']
     runs-on: ubuntu-latest
 
     steps:
@@ -17,6 +20,7 @@ jobs:
         uses: rhysd/action-setup-vim@v1
         with:
           neovim: true
+          version: ${{ matrix.neovim_branch }}
 
       - name: Install dependent repos
         run: |
