--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     strategy:
+      fail-fast: false
       matrix:
         neovim_branch: ['v0.7.0', 'nightly']
     runs-on: ubuntu-latest
