--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -30,4 +30,4 @@ jobs:
           ln -s $(pwd) ~/.local/share/nvim/site/pack/vendor/start
 
       - name: Run tests
-        run: nvim --headless --noplugin -u tests/minimal.vim -c "packadd plenary.nvim" -c "PlenaryBustedFile tests/debugprint.lua"
+        run: nvim --headless --noplugin -u tests/minimal.vim -c "packadd plenary.nvim" -c "packadd nvim-treesitter" -c "PlenaryBustedFile tests/debugprint.lua"
