--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        neovim_branch: ['v0.7.2', 'nightly']
+        neovim_branch: ['v0.6.1', 'v0.7.2', 'nightly']
     runs-on: ubuntu-latest
 
     steps:
