--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        neovim_branch: ['v0.7.2', 'nightly']
+        neovim_branch: ['v0.7.2', 'v0.8.0', 'nightly']
     runs-on: ubuntu-latest
 
     steps:
@@ -27,7 +27,7 @@ jobs:
         run: |
           git clone --depth 1 https://github.com/nvim-lua/plenary.nvim ~/.local/share/nvim/site/pack/vendor/start/plenary.nvim
           git clone --depth 1 https://github.com/nvim-treesitter/nvim-treesitter ~/.local/share/nvim/site/pack/vendor/start/nvim-treesitter
-          ln -s $(pwd) ~/.local/share/nvim/site/pack/vendor/start
 
       - name: Run tests
-        run: nvim --headless --noplugin -u tests/minimal.vim -c "packadd plenary.nvim" -c "packadd nvim-treesitter" -c "PlenaryBustedFile tests/debugprint.lua"
+        run: |
+          make test
