--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        neovim_branch: ['v0.8.0', 'nightly']
+        neovim_branch: ["v0.8.0", "nightly"]
     runs-on: ubuntu-latest
 
     steps:
