--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,5 +1,5 @@
 ---
-name: Unit testing
+name: Tests
 
 on:
   push:
@@ -8,12 +8,27 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  commit_lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: webiny/action-conventional-commits@v1.0.3
+
+  stylua:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: JohnnyMorganz/stylua-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: --color always --check lua/ tests/
+
+  unit_test:
+    runs-on: ubuntu-latest
+
     strategy:
       fail-fast: false
       matrix:
         neovim_branch: ["v0.8.3", "v0.9.0", "nightly"]
-    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
