--- a/.github/workflows/panvimdoc.yaml
+++ b/.github/workflows/panvimdoc.yaml
@@ -9,10 +9,18 @@ jobs:
     name: pandoc to vimdoc
     steps:
       - uses: actions/checkout@v4
-      - name: wrapping
+      - name: readme
         uses: kdheepak/panvimdoc@main
         with:
           vimdoc: debugprint.nvim
+          titledatepattern: "%Y-%m-%d"
+          shiftheadinglevelby: -1
+          dedupsubheadings: false
+      - name: showcase
+        uses: kdheepak/panvimdoc@main
+        with:
+          pandoc: SHOWCASE.md
+          vimdoc: debugprint.nvim-showcase
           titledatepattern: "%Y-%m-%d"
           shiftheadinglevelby: -1
           dedupsubheadings: false
