--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,18 @@
 # See https://pre-commit.com for more information
 ---
 repos:
+    - repo: meta
+      hooks:
+          - id: check-hooks-apply
+          - id: check-useless-excludes
     - repo: https://github.com/pre-commit/pre-commit-hooks
       rev: v4.6.0
       hooks:
           - id: check-added-large-files
+    - repo: https://github.com/gitleaks/gitleaks
+      rev: v8.18.4
+      hooks:
+          - id: gitleaks
     - repo: https://github.com/JohnnyMorganz/StyLua
       rev: v0.20.0
       hooks:
