test: Automatically use the latest stable NeoVim

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -43,7 +43,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        neovim_branch: ["v0.9.5", "v0.10.1", "nightly"]
+        neovim_branch: ["v0.9.5", "stable", "nightly"]
 
     steps:
       - uses: actions/checkout@v4
