WIP: proof-of-concept busted test setup
This PR takes some baby steps towards solving
https://github.com/andrewferrier/debugprint.nvim/issues/107

Short explanation of the commit
===============================

To get started,
- install luarocks
- run `luarocks --local install nlua` to install
  https://github.com/mfussenegger/nlua which is needed for running
  busted locally
- run `make init` to install the necessary dependencies
- run `eval $(luarocks path --no-bin --lua-version 5.1)` (seems to be
  required on osx) to set up the luarocks path, which is needed to run
  the tests locally
- run `make test` to run the tests
- optionally, use a file watcher like
  https://github.com/watchexec/watchexec to automatically run the tests
  when files change

Current status
==============

- some of the tests are failing, but the setup is working
- not sure about ci, but it's the same setup as in
  https://github.com/mikavilpas/yazi.nvim and that works, so it can be
  incrementally copied over when in doubt
- I meant to finish this in one go, but it proved more challenging than
  I originally thought so I'm sending this as a WIP

Recommendations
===============

- I might have missed some crucial setup steps, so let me know if
  something doesn't make sense
- I think it's possible to implement some things diferently, so if you
  have some preferences, we can simplify the setup (or complicate it 😄)

https://github.com/nvim-neorocks/nvim-busted-action

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -63,10 +63,14 @@ jobs:
           version: ${{ matrix.neovim_branch }}
 
       - name: Install dependent repos
-        run: |
-          git clone --depth 1 https://github.com/nvim-lua/plenary.nvim ~/.local/share/nvim/site/pack/vendor/start/plenary.nvim
-          git clone --depth 1 https://github.com/nvim-treesitter/nvim-treesitter ~/.local/share/nvim/site/pack/vendor/start/nvim-treesitter
-          git clone --depth 1 https://github.com/echasnovski/mini.nvim ~/.local/share/nvim/site/pack/vendor/start/mini.nvim
+        shell: bash
+        run: ./.github/install-dependencies.sh
+
+      - name: Run tests
+        uses: nvim-neorocks/nvim-busted-action@v1.1.0
+        with:
+          nvim_version: ${{ matrix.neovim_version }}
+          luarocks_version: "3.11.1"
 
       - name: Run tests
         run: |
