--- a/.editorconfig
+++ b/.editorconfig
@@ -2,8 +2,13 @@
 
 [*]
 charset = utf-8
-indent_size = 4
 indent_style = space
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[*.lua]
+indent_size = 4
+
+[*.{yml,yaml}]
+indent_size = 2
