--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,3 +17,8 @@ repos:
       rev: v0.20.0
       hooks:
           - id: stylua-system
+    - repo: https://github.com/igorshubovych/markdownlint-cli
+      rev: v0.43.0
+      hooks:
+          - id: markdownlint
+            exclude: "CHANGELOG.md"
