test: Add luacheck to correspond with github workflow

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,3 +22,8 @@ repos:
       hooks:
           - id: markdownlint
             exclude: "CHANGELOG.md"
+    - repo: https://github.com/Calinou/pre-commit-luacheck
+      rev: v1.0.0
+      hooks:
+          - id: luacheck
+            files: lua/
