test: Add llscheck to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,3 +27,7 @@ repos:
       hooks:
           - id: luacheck
             files: lua/
+    - repo: https://github.com/jeffzi/llscheck
+      rev: v0.6.0
+      hooks:
+        - id: llscheck
