test: Add urlchecker

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -71,3 +71,24 @@ jobs:
       - name: Run tests
         run: |
           make test
+
+  urlchecker:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Install urlchecker
+      run: |
+        python -m pip install urlchecker
+
+    - name: Run urlchecker
+      run: |
+        urlchecker check \
+          --branch main \
+          --no-print \
+          --file-types .md \
+          --retry-count 1 \
+          --timeout 5 \
+          .
