--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -74,8 +74,17 @@ jobs:
       - name: Install dependent repos
         run: |
           git clone --depth 1 https://github.com/nvim-lua/plenary.nvim ~/.local/share/nvim/site/pack/vendor/start/plenary.nvim
-          git clone --depth 1 https://github.com/nvim-treesitter/nvim-treesitter ~/.local/share/nvim/site/pack/vendor/start/nvim-treesitter
           git clone --depth 1 https://github.com/echasnovski/mini.nvim ~/.local/share/nvim/site/pack/vendor/start/mini.nvim
+
+      - name: Install treesitter
+        if: matrix.neovim_branch != 'nightly'
+        run: |
+          git clone --depth 1 https://github.com/nvim-treesitter/nvim-treesitter ~/.local/share/nvim/site/pack/vendor/start/nvim-treesitter
+
+      - name: Install dependent repos (nightly)
+        if: matrix.neovim_branch == 'nightly'
+        run: |
+          git clone --depth 1 --branch main https://github.com/nvim-treesitter/nvim-treesitter ~/.local/share/nvim/site/pack/vendor/start/nvim-treesitter
 
       - name: Run tests
         run: |
