--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -76,12 +76,12 @@ jobs:
       - name: Install treesitter
         if: matrix.neovim_branch != 'nightly'
         run: |
-          git clone --depth 1 https://github.com/nvim-treesitter/nvim-treesitter ~/.local/share/nvim/site/pack/vendor/start/nvim-treesitter
+          git clone --depth 1 --branch master https://github.com/nvim-treesitter/nvim-treesitter ~/.local/share/nvim/site/pack/vendor/start/nvim-treesitter
 
       - name: Install treesitter (nightly)
         if: matrix.neovim_branch == 'nightly'
         run: |
-          git clone --depth 1 --branch main https://github.com/nvim-treesitter/nvim-treesitter ~/.local/share/nvim/site/pack/vendor/start/nvim-treesitter
+          git clone --depth 1 https://github.com/nvim-treesitter/nvim-treesitter ~/.local/share/nvim/site/pack/vendor/start/nvim-treesitter
 
       - name: Run tests
         run: |
